--- a/css/styles.css
+++ b/css/styles.css
@@ -482,6 +482,7 @@ img {
   line-height: 1.62;
   letter-spacing: 3%;
   color: #212121;
+  transition: background-color 250ms, color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .hover-color:hover,
 .hover-color:focus {
@@ -553,4 +554,48 @@ img {
 }
 .link-projekt {
   display: inline-block;
+}
+/* ------------------modal-------------- */
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.2);
+  transition: 500ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.backdrop.is-hidden {
+  opacity: 0;
+  pointer-events: none;
+}
+.backdrop.is-hidden .modal {
+  transform: translate(-50%, -50%) scale(0.5);
+}
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  background-color: #ffffff;
+  min-width: 528px;
+  min-height: 581px;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+  transform: translate(-50%, -50%) scale(1);
+  transition: transform 500ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.button-modal {
+  background-color: #ffffff;
+  height: 30px;
+  width: 30px;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+  position: absolute;
+  right: 8px;
+  top: 8px;
+  cursor: pointer;
+}
+.buttom-close {
+  fill: rgb(0, 0, 0);
 }
