--- a/css/styles.css
+++ b/css/styles.css
@@ -253,6 +253,26 @@ img {
 .presentation-foto:not(:last-child) {
   margin-right: 30px;
 }
+.presentation-foto {
+  position: relative;
+}
+.tumb {
+  position: absolute;
+  bottom: 0px;
+  min-width: 370px;
+  min-height: 70px;
+  background-color: rgba(47, 48, 58, 0.8);
+}
+.tumb-text {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  text-align: center;
+  padding-top: 27px;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #ffffff;
+}
 .main-command {
   text-align: center;
   margin-bottom: 50px;
@@ -525,6 +545,7 @@ img {
   color: #212121;
 }
 .menu-text {
+  font-weight: 400;
   font-size: 16px;
   line-height: 1.87;
   letter-spacing: 3%;
@@ -547,14 +568,44 @@ img {
   border: 1px solid#EEEEEE;
   border-top: none;
 }
+.link-projekt:focus .tumb-projekt-text,
+.link-projekt:hover .tumb-projekt-text,
 .link-projekt:focus,
 .link-projekt:hover {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
+  transform: translateY(0);
 }
 .link-projekt {
   display: inline-block;
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+.tumb-projekt {
+  position: relative;
+  overflow: hidden;
+}
+.tumb-projekt-text {
+  position: absolute;
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  top: 0;
+  left: 0;
+  background-color: rgba(33, 150, 243, 0.9);
+  width: 100%;
+  height: 100%;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 1.55;
+  letter-spacing: 0.03em;
+  color: #ffffff;
+  padding: 63px 24px;
+  overflow: auto;
+}
+/* .tumb-projekt-text:hover,
+.tumb-projekt-text:focus {
+  transform: translateY(0);
+} */
+
 /* ------------------modal-------------- */
 .backdrop {
   position: fixed;
