--- a/css/styles.css
+++ b/css/styles.css
@@ -46,6 +46,7 @@ img {
 .list-contacts {
   margin-right: 10px;
   fill: #757575;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .header-right {
   display: flex;
@@ -502,7 +503,8 @@ img {
   line-height: 1.62;
   letter-spacing: 3%;
   color: #212121;
-  transition: background-color 250ms, color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms, color 250ms,
+    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .hover-color:hover,
 .hover-color:focus {
@@ -637,6 +639,7 @@ img {
   transition: transform 500ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .button-modal {
+  display: flex;
   background-color: #ffffff;
   height: 30px;
   width: 30px;
@@ -646,7 +649,10 @@ img {
   right: 8px;
   top: 8px;
   cursor: pointer;
+  padding: 0;
+  justify-content: center;
+  align-items: center;
 }
-.buttom-close {
+.button-close {
   fill: rgb(0, 0, 0);
 }
